Jan 15 2003  3.1.0  Fixed data network autogrouping
                    Fixed panels client segfault when viewing details on a 
                     network absorbed into an autogroup
Jan 13 2003  3.1.0  Added more packet sanitizing.  Most invalid management
                     frames now intercepted, data frames still problematic.
                    Merged gpsmap patches from Andrew Knutsen to add labeling
                     of manufacturer and beacon info, avoid overlapping network
                     labels, and scripts in the extras directory to generate
                     multiple maps of an area and to merge the IEEE 
                     manufacturer list into the Kismet manuf file.
                    Tweaked mac_map to separate insert and fast_insert
                    Added autogrouping data-only networks
                    Added validation checks before calling Packetsource::Close,
                     fixes segfault for invalid pcapfile opens
                    Improved probed network integration code
Jan 12 2003  3.1.0  Fixed stupid word-transposition in default config, should
                     be channelsplit not splitchannels.
Jan 10 2003  3.1.0  Started implementing wsp100 snmp calls in new framework
                    Added sanity checks to ExecSysCmd() calls in pcapsource
                    Added coloring of decloaked networks to panelfront
Jan 09 2003  3.1.0  Merged patch from Bjarke Pedersen for different sounds for
                     new wepped networks
Jan 07 2003  3.1.0  Fixed more wep keysize bugs
Jan 04 2003  3.1.0  Changed probe network autogrouping to not group when there
                     is only 1 probe network
Jan 03 2003  3.1.0  Fixed nullproberesp alert
                    Fixed segfault if acpi/ACAD/ not found
                    Merged patch from Million adding more ACPI support
                    Merged patch from Million with numerous variable init
                     and other memory checks to kismet_server